# substrate-kitties

./: Makefile
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  linked_item.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
