[package]
name = "pallet-kitties"
version = "0.1.0"
authors = ["Bryan Chen"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

frame-support = { version = "2.0.0-rc2", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2' }
frame-system = { version = "2.0.0-rc2", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc2' }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
]